# udtube

./: .gitignore  README.md  README_KOREAN.md  __init__.py  batch.py  biaffine_parser.py  callbacks.py  conllu_datasets.py  data_module.py  data_utils.py  datamodules.py  datasets.py  defaults.py  deps_head.py  edit_scripts.py  encoders.py  evaluate.py  evaluator.py  korean_quickstart.sh  korean_unified_analyzer.py  korean_web_interface.py  models.py  mst.py  pyproject.toml  requirements.txt  test_korean.py  tuning.py  udtube.py
.circleci/: config.yml
configs/: README  README.md  ewt_bert.yaml  ewt_distillbert.yaml  ewt_roberta.yaml  fit_config.yaml  korean_klue_bert.yaml  korean_kobert.yaml  korean_mbert.yaml  korean_quick_training.yaml  korean_training.yaml  predict_config.yaml  syntagrus_mbert.yaml  syntagrus_rubert.yaml  syntagrus_xlm-roberta.yaml  test_config.yaml
examples/wandb_sweeps/: README.md  best_hyperparameters.py  get_hyperparameters.py  grid.yaml  sweep.py  sweep_config.yaml  syntagrus.yaml  tuning.py  util.py
examples/wandb_sweeps/configs/: ewt_grid.yaml  ewt_tune.yaml  gdt_grid.yaml  gdt_tune.yaml  syntagrus_tune.yaml
korean_data/: sample_text.txt
layers/: models.py
scripts/: README.md  convert_to_um.py  evaluate.py  pretokenize.py  remove_multiword_tokens.py  remove_mwe.py  requirements.txt  run_queries.py  udpipe.py  udpipe_run.py
sweep_resources/: tuning.py
tests/: conllu_test.py  control_test.py  edit_scripts_test.py  length_test.py  nohead_test.py  udtube_test.py  white_space_test.py
tests/testdata/: README.md  badsentence.conllu  el_expected.conllu  el_expected.test  el_train.conllu  en_expected.conllu  en_expected.test  en_train.conllu  length.conllu  length_config.yaml  ru_expected.conllu  ru_expected.test  toolong.conllu  udtube_config.yaml
tests/testdata/datasets/: README.md  el_expected.conllu  el_train.conllu  en_expected.conllu  en_train.conllu  ru_expected.conllu  ru_train.conllu
udtube/: __init__.py  batches.py  callbacks.py  cli.py  datamodules.py  datasets.py  defaults.py  encoders.py  main.py  models.py  modules.py  schedulers.py  special.py  trainers.py  udtube.py
udtube/data/: __init__.py  batches.py  collators.py  conllu.py  datamodules.py  datasets.py  edit_scripts.py  indexes.py  logits.py  mappers.py  padding.py  parsers.py  pretokenizers.py  tokenizers.py
