[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
include-package-data = false

[tool.poetry]
name = "udtube"
version = "0.1.0"
description = "Neural morphological analysis"
readme = "README.md"
license = "Apache 2.0"
authors = [
    "Daniel Yakubov <danielyak98@gmail.com>",
    "Kyle Gorman <kylebgorman@gmail.com"
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
include = ["udtube*"]
exclude = ["configs*",  "examples*", "scripts*" ]

[tool.poetry.dependencies]
python = "^3.9"
jsonargparse = { version = "^4.32.0", extras = ["signatures"] }
lightning = "^2.4.0"
transformers = "^4.44.0"
torch = "^2.4.0"
torchmetrics = "^1.4.0.post0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
parameterized = "^0.9.0"
pytest = "^7.4.4"
build = "^1.2.1"
twine = "^4.0.2"
wandb = "^0.18.0"


[project.scripts]
udtube = "udtube.cli:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/udtube"